--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/fchang1720/Podcast-Website/issues"
   },
-  "homepage": "https://github.com/fchang1720/Podcast-Website#readme"
+  "homepage": "https://github.com/fchang1720/Podcast-Website#readme",
+  "dependencies": {
+    "concurrently": "^7.2.1"
+  }
 }
