--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "concurrently": "^7.2.1"
+    "concurrently": "^7.2.1",
+    "linkify-react": "^3.0.4",
+    "linkifyjs": "^3.0.5"
   }
 }
