--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     "bootstrap": "^5.1.3",
     "graphql": "^16.5.0",
     "jwt-decode": "^3.1.2",
+    "linkify-html": "^3.0.5",
+    "linkify-react": "^3.0.4",
+    "linkifyjs": "^3.0.5",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
