--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "concurrently": "^7.2.1",
+    "linkify-html": "^3.0.5",
     "linkify-react": "^3.0.4",
     "linkifyjs": "^3.0.5"
   }
